# tickatlas-sdk

./: .gitattributes  .gitignore  README.md  SPEC.md  composer.json
.github/workflows/: go.yml  javascript.yml  php.yml  python.yml
go/: .gitignore  CHANGELOG.md  LICENSE  README.md  api.go  api_test.go  client.go  client_test.go  constants.go  doc.go  errors.go  errors_test.go  go.mod  integration_test.go  models.go
javascript/: .npmignore  CHANGELOG.md  README.md  package-lock.json  package.json  tsconfig.json  tsup.config.ts
javascript/src/: client.ts  constants.ts  env.d.ts  errors.ts  http.ts  index.ts  types.ts
javascript/test/: client.test.ts  helpers.ts  integration.test.ts
php/: .gitignore  CHANGELOG.md  README.md  composer.json  phpunit.xml
php/src/: Client.php
php/src/Enums/: Bias.php  Category.php  HeatmapTimeframe.php  HeatmapType.php  Impact.php  Indicator.php  IndicatorCategory.php  Period.php  Timeframe.php
php/src/Exception/: ApiException.php  AuthenticationException.php  ConfigurationException.php  ExceptionFactory.php  NetworkException.php  NotFoundException.php  PermissionDeniedException.php  RateLimitException.php  ServerException.php  TickAtlasException.php  ValidationException.php
php/src/Http/: HttpClient.php
php/src/Model/: AbstractModel.php  Account.php  BulkQuoteItem.php  BulkQuotes.php  Calendar.php  CalendarEvent.php  Candle.php  Health.php  Heatmap.php  IndicatorCatalogue.php  IndicatorHistory.php  IndicatorHistoryPoint.php  IndicatorSet.php  IndicatorValue.php  Layout.php  MultiIndicators.php  Ohlc.php  Pagination.php  Quote.php  QuoteSource.php  ScreenerResult.php  ScreenerResults.php  Sessions.php  Spread.php  SpreadCompareItem.php  SpreadComparison.php  Summary.php  SymbolList.php  SymbolListItem.php  SymbolSpec.php  Tick.php  Ticks.php
php/src/Retry/: RealSleeper.php  RecordingSleeper.php  Sleeper.php
php/tests/Integration/: LiveApiTest.php
php/tests/Support/: MockClientFactory.php
python/: .gitignore  CHANGELOG.md  README.md  pyproject.toml
python/src/tickatlas/: __init__.py  _client.py  _constants.py  _endpoints.py  _exceptions.py  _models.py  _transport.py
python/tests/: conftest.py  test_async.py  test_config.py  test_endpoints.py  test_errors.py  test_integration.py  test_models_constants.py  test_retries.py
(+5 files in other folders)
